<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include
            android:id="@+id/auth_logo"
            layout="@layout/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_logo"
            android:padding="@dimen/default_screen_padding"
            android:layout_centerInParent="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auth_il_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:nextFocusDown="@+id/auth_edit_password"
                    android:id="@+id/auth_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auth_il_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/auth_il_email">

                <android.support.v7.widget.AppCompatEditText
                    android:nextFocusDown="@+id/auth_btn_registration"
                    android:id="@+id/auth_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/auth_ll_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/auth_il_password"
                android:orientation="horizontal"
                android:paddingTop="@dimen/default_screen_padding">

                <Button
                    android:id="@+id/auth_btn_registration"
                    style="@style/EntregoBorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_registration" />

                <Button
                    android:id="@+id/auth_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_login" />

            </LinearLayout>

            <Button
                android:id="@+id/auth_btn_forgot_pass"
                style="@style/EntregoSacondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/auth_ll_control"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/double_screen_padding"
                android:text="@string/ui_forgot_password" />


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>