<resources>
    <string name="app_name">EntreGO</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="ui_error_email">Invalid email</string>
    <string name="ui_error_password">Invalid password</string>
    <string name="ui_forgot_password">Forgot password</string>
    <string name="ui_login">login</string>
    <string name="ui_registration">registration</string>
    <string name="er_default_network_error">Cannot connection to server</string>
    <string name="ui_progress_dialog_title">Loading…</string>
    <string name="ui_loading">Please, wait a second</string>
    <string name="hint_name">Name</string>
    <string name="hint_password_conf">Repeat password</string>
    <string name="hint_phone">Phone number</string>
    <string name="ui_i_have_account">i already have an account</string>
    <string name="hint_phone_code">code</string>
    <string name="grant_permission" translatable="false">OK</string>
    <string name="turn_on">Turn on GPS</string>

    <string name="should_enable_gps">Your GPS is disabled</string>
    <string name="error_passwords_not_equals">Password mismatch</string>
    <string name="ui_success_regist">Almost done! \n To finish you register click the link we send to your email.</string>
    <string name="back_to_auth">back to login</string>
    <string name="ui_success_restore">We sent you an email \n to restore your password</string>
    <string name="title_activity_order">Order</string>
    <string name="font_fontFamily_medium">sans-serif</string>

    <string name="ui_title_home">Home</string>
    <string name="ui_title_account">Account</string>
    <string name="ui_title_income">Income</string>
    <string name="ui_title_score">Score</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ui_descr_to_restore">Enter your email\n to restore your password</string>
    <string name="ui_restore">restore</string>
    <string name="action_faq">FAQ</string>
    <string name="ui_edit">edit</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>

    <string name="ui_title_vehicle">Vehicle</string>
    <string name="ui_title_profile">Profile</string>
    <string name="ui_help">Help</string>
    <string name="vehicle_brand">Brand</string>
    <string name="unknown">Unknown</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_cylinder_capas">Cylinder capacity</string>
    <string name="vehicle_plate">Plate</string>
    <string name="ui_route">Route</string>
    <string name="ui_files">Files</string>
    <string name="ui_account">Account</string>
    <string name="ui_save">Save</string>
    <string name="btn_change_password">change password</string>

    <string name="titile_edit_user">Edit vehicle</string>
    <string name="success_profile_updated">Profile have been updated</string>
    <string name="success_vehicle_update">Vehicle have been updated</string>
    <string name="save_password">save password</string>

    <string name="ui_success_pass_changed">Password have been changed</string>
    <string name="ui_logout">Logout</string>
    <string name="hint_model">Model</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_cylinders">Cylinders</string>
    <string name="hint_plate">Plate</string>

    <string name="error_empty_fields">Missed required fields</string>
    <string name="titile_edit_vehicle">Edit vehicle</string>
    <string name="vehicle_empty_view">Vehicle haven\'t been registered yet</string>
    <string name="add_vehicle">add vehicle</string>
    <string name="hint_year">Year</string>
    <string name="start_point">Start point</string>
    <string name="finish_point">Finish point</string>

    <string name="error_number_cylinder_year">Cylinder and year should be number</string>
    <string name="ui_user">User</string>
    <string name="debug_text">text</string>
    <string name="ui_customer">Customer</string>
    <string name="inc_report">Incident report</string>
    <string name="realtime_assist">Real time assistance</string>
    <string name="ui_chatting">Support</string>
    <string name="sign_bill">Signature</string>
    <string name="sign_title">Please sign bellow</string>
    <string name="ui_navigation">Navigation</string>
    <string name="error_email_registered">Email already registered</string>
    <string name="add_file_descr">Add a photo by camera or chosse a picture from the gallery</string>
    <string name="error_loading_image">Cannot load this image</string>

    <string name="ui_image_folder">Select image</string>
    <string name="ui_tap_to_select">Tap to select</string>
    <string name="customer_comments">Customer Comments</string>
    <string name="improvement_tips">Improvement tips</string>
    <string name="weekly_updates">Weekly updates</string>
    <string name="best_messengers">Best messengers</string>
    <string name="you">You</string>
    <string name="best_messenger">Best messenger</string>
    <string name="cancel_delivery_message">Do you really want to cancel?</string>
    <string name="charts_estimated_pay">Estimated pay</string>
    <string name="history_of_services">History of services</string>
    <string name="todays_services">Today\'s services</string>
    <string name="empty_list_history_services">No services in list</string>
    <string name="recent_services">Recent services</string>
    <string name="current_currency">$</string>
    <string name="base_price">Base price</string>
    <string name="support_email" translatable="false">operaciones@entregoya.com</string>
    <string name="hint_bank_name">Bank name</string>
    <string name="ui_success_cancellation">Successful cancellation!</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_account_number">Account number</string>
    <string name="hint_account_swift_code">Swift code</string>
    <string name="ui_license">Licence</string>
    <string name="ui_id" translatable="false">ID</string>
    <string name="ui_send">send</string>
    <string name="status_on_the_way">On the way</string>
    <string name="status_waiting_for_ship">Waiting for the shipment</string>
    <string name="status_ship_on_way">Shipment on the way</string>
    <string name="status_waiting_for_delivery">Waiting for delivery</string>
    <string name="status_delivered">Delivered</string>
    <string name="this_week">This week</string>
    <string name="earning_week">Earning of the week</string>
    <string name="no_data_found">No data found</string>
    <string name="cancel">cancel</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="alert">Attention!</string>
    <string name="dialog_location_permission_required">If you want to receive orders you should grant location permission</string>
    <string name="dialog_gps_required">If you want to receive orders you should turn on GPS and in your device</string>
    <string name="no_delivery">(No services available)</string>
    <string name="cannot_load_image">Cannot load this image</string>
    <string name="success_upload_photo">Photo have been uploaded</string>
    <string name="service_no">Service No.</string>
    <string name="killometers">Kilometers</string>
    <string name="purchase">Purchase</string>
    <string name="client">Client</string>
    <string name="service">Service</string>
    <string name="schedule">Schedule</string>
    <string name="text_package">Package</string>
    <string name="origen">Origen</string>
    <string name="duration">Duration</string>
    <string name="km">km</string>
    <string name="nothing_to_show">Nothing found</string>
    <string name="minutes">Minutes</string>
    <string name="shopping">Shopping</string>
    <string name="minutes_short">min</string>
    <string name="killometers_short">km</string>
    <string name="actual_score_is">Actual score is</string>
    <string name="improvement_tips_descr">Improve your skills with the best messaging practices</string>
    <string name="accepted_services">Declined services</string>
    <string name="completed_services">Completed services</string>
    <string name="canceled_services">Canceled services</string>
    <string name="weeks_resumes">Weeks resume</string>
    <string name="total_services">Total services</string>
    <string name="scored_services">Scored services</string>
    <string name="five_star_services">5 stars services</string>
    <string name="amount_to_pay">Amount to pay:</string>
    <string name="send_email">Send email...</string>
    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_error">Error</string>
    <string name="text_no_google_maps">To use navigation you should install Google Maps application</string>
    <string name="notification_received_delivery">Received delivery</string>
    <string name="notification_message_delivery">Click to open descriptions</string>
    <string name="text_now">NOW</string>
    <string name="error_photo_to_large">Photo too large. Pick another, please.</string>
    <string name="point_number" translatable="false">%d </string>
    <string name="error_session_expired">Session expired</string>

    <string name="notification_received_chat_message">New message from customer</string>
    <string name="total_pay">Total pay:</string>
    <string name="welcome_logo">The control of the city in your hand</string>
    <string name="registered_field">Probably already registered</string>
    <string name="error_no_order">No available order</string>
    <string name="success_send_report">Report have been sent</string>
    <string name="creating">Creating</string>
    <string name="administration">Administration</string>
    <string name="service_report">Service report</string>
    <string name="error_validation_field">Field validation error</string>
    <string name="text_add_the_total">Add the total amount</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_no_receipt_photo">Receipt photo is required</string>
    <string name="text_permission_required">If you reject permission,you can not use this service\\n\\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="success_send_receipt">Receipt have been sent</string>
    <string name="special_notes">Special notes</string>
    <string name="error_fcm_token_is_null" translatable="false">Fcm token is null</string>
    <string name="no_customer_phone">Phone number not available</string>


</resources>
